[project]
name = "tds-quiz-solver"
version = "0.2.0"
description = "Robust automated quiz-solving agent with multi-model support"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    
    # HTTP clients
    "httpx>=0.27.0",
    "requests>=2.32.0",
    
    # LangChain & LangGraph
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "langchain-groq>=0.2.0",
    "langchain-openai>=0.2.0",
    
    # Browser automation
    "playwright>=1.48.0",
    
    # Data processing
    "pandas>=2.2.0",
    "openpyxl>=3.1.0",
    "xlrd>=2.0.0",
    "PyPDF2>=3.0.0",
    "pdfplumber>=0.11.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    
    # Image processing
    "pillow>=10.0.0",
    
    # Utilities
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "tenacity>=9.0.0",
    "structlog>=24.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]
