[project]
name = "tds-quiz-solver"
version = "0.2.0"
description = "Robust automated quiz-solving agent with multi-model support"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "email-validator>=2.0.0",
    
    # HTTP clients
    "httpx>=0.27.0",
    "requests>=2.32.0",
    
    # LangChain & LangGraph
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "langchain-groq>=0.2.0",
    "langchain-openai>=0.2.0",
    
    # Browser automation
    "playwright>=1.48.0",
    
    # Data processing
    "pandas>=2.2.0",
    "openpyxl>=3.1.0",
    "xlrd>=2.0.0",
    "PyPDF2>=3.0.0",
    "pdfplumber>=0.11.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    
    # Image processing
    "pillow>=10.0.0",
    
    # Utilities
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "tenacity>=9.0.0",
    "structlog>=24.0.0",
    
    # Data science (pre-installed for agent)
    "numpy>=1.26.0",
    "scipy>=1.12.0",
    "polars>=0.20.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "plotly>=5.18.0",
    "altair>=5.2.0",
    "scikit-learn>=1.4.0",
    "statsmodels>=0.14.0",
    "networkx>=3.2.0",
    "python-dateutil>=2.8.0",
    "pytz>=2024.1",
    "chardet>=5.2.0",
    "tqdm>=4.66.0",
    "pyyaml>=6.0.0",
    "toml>=0.10.0",
    "json5>=0.9.0",
    "python-docx>=1.1.0",
    "geopy>=2.4.0",
    "shapely>=2.0.0",
    "geopandas>=0.14.0",
    
    # Additional useful packages
    "fuzzywuzzy>=0.18.0",        # Fuzzy string matching
    "python-Levenshtein>=0.25.0", # Fast string matching
    "regex>=2024.0.0",           # Advanced regex
    "sympy>=1.12.0",             # Symbolic math
    "cryptography>=42.0.0",      # Encryption/hashing
    "dateparser>=1.2.0",         # Parse various date formats
    "phonenumbers>=8.13.0",      # Phone number parsing
    "pycountry>=24.0.0",         # Country/currency codes
    "babel>=2.14.0",             # Locale/currency formatting
    "xmltodict>=0.13.0",         # XML parsing
    "html5lib>=1.1",             # HTML parsing
    "markdown>=3.5.0",           # Markdown processing
    "tabulate>=0.9.0",           # Table formatting
    "validators>=0.22.0",        # URL/email validation
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]
